--- a/src/components/order/order.html
+++ b/src/components/order/order.html
@@ -388,13 +388,37 @@
       <span ng-bind-html="{ value: vm.orderInfo.amountToPay, currency: vm.orderInfo.currencyToPay } | price"></span>
     </div>
 
+
+
+
+    <!-- Возможный воркэраунд #34307 -->
+    <!--<payment-frame ng-if="vm.showPaymentFrame && vm.orderInfo.paymentform !== 'electronic_money'" url="vm.orderInfo.paymentRedirectTo"></payment-frame>-->
+    <!--TODO: разобраться как переопределять контроллеры-->
+      <div style="display: none;" ng-init="vm.orderInfo.paymentform === 'electronic_money' ? vm.payEmoneyButtonClicked = false : vm.payEmoneyButtonClicked = true"></div>
+      <div ng-if="vm.orderInfo.paymentform === 'electronic_money' && vm.showPaymentFrame" class="btn-row btn-row--confirm-electronic-money">
+          <ul>
+              <li ng-if="vm.orderInfo.paymentform === 'electronic_money'">
+                  <a href ng-click="vm.payEmoneyButtonClicked = true" class="btn btn-confirm-emoney-pay">
+                      {{ 'web.buttons.confirmElectronicMoneyPay' | aliasStatic}}
+                  </a>
+              </li>
+          </ul>
+      </div>
+
+
     <div class="checkPassengerDataInfo" ng-if="vm.showPaymentFrame">
       <p class="checkPassengerDataInfo__content">{{ 'web.messages.checkPassengerData' | aliasStatic }}</p>
     </div>
-    <payment-frame ng-if="vm.showPaymentFrame" url="vm.orderInfo.paymentRedirectTo"></payment-frame>
+    <payment-frame ng-if="vm.showPaymentFrame && vm.payEmoneyButtonClicked" url="vm.orderInfo.paymentRedirectTo"></payment-frame>
+
 
     <div ng-if="!vm.showPaymentFrame" class="btn-row">
       <ul>
+        <li ng-if="vm.orderInfo.paymentform === 'electronic_money' && vm.orderInfo.header.status !== 'cancelled'">
+          <a href ng-click="vm.payEmoneyButtonClicked = true" class="btn btn-confirm-emoney-pay">
+            {{ 'web.buttons.confirmElectronicMoneyPay' | aliasStatic}}
+          </a>
+        </li>
         <li ng-if="vm.orderInfo.possiblePaymentForms">
           <a href class="btn btn-change-pay-method" fancybox="popupChoosePayMethod">
             {{ 'web.buttons.changePayMethod' | aliasStatic}}
