--- a/src/components/order/order.html
+++ b/src/components/order/order.html
@@ -394,12 +394,14 @@
     <!-- Возможный воркэраунд #34307 -->
     <!--<payment-frame ng-if="vm.showPaymentFrame && vm.orderInfo.paymentform !== 'electronic_money'" url="vm.orderInfo.paymentRedirectTo"></payment-frame>-->
     <!--TODO: разобраться как переопределять контроллеры-->
-      <div style="display: none;" ng-init="vm.orderInfo.paymentform === 'electronic_money' ? vm.payEmoneyButtonClicked = false : vm.payEmoneyButtonClicked = true"></div>
-      <div ng-if="vm.orderInfo.paymentform === 'electronic_money' && vm.showPaymentFrame" class="btn-row btn-row--confirm-electronic-money">
+      <div style="display: none;" ng-init="vm.orderInfo.paymentform === 'electronic_money' || 'e-banking' ? vm.payEmoneyButtonClicked = false : vm.payEmoneyButtonClicked = true"></div>
+      <div ng-if="vm.orderInfo.paymentform === 'electronic_money' || 'e-banking' && vm.showPaymentFrame" class="btn-row btn-row--confirm-electronic-money">
           <ul>
-              <li ng-if="vm.orderInfo.paymentform === 'electronic_money'">
+              <li ng-if="vm.orderInfo.paymentform === 'electronic_money' || 'e-banking'">
                   <a href ng-click="vm.payEmoneyButtonClicked = true" class="btn btn-confirm-emoney-pay">
-                      {{ 'web.buttons.confirmElectronicMoneyPay' | aliasStatic}}
+                    <span ng-if="vm.orderInfo.paymentform === 'electronic_money'">{{ 'web.buttons.confirmElectronicMoneyPay' | aliasStatic}}</span>
+                    <span ng-if="vm.orderInfo.paymentform === 'e-banking'">{{ 'web.buttons.confirmEBankingPay' | aliasStatic }}</span>
+
                   </a>
               </li>
           </ul>
@@ -414,9 +416,10 @@
 
     <div ng-if="!vm.showPaymentFrame" class="btn-row">
       <ul>
-        <li ng-if="vm.orderInfo.paymentform === 'electronic_money' && vm.orderInfo.header.status !== 'cancelled'">
+        <li ng-if="vm.orderInfo.paymentform === 'electronic_money' || 'e-banking' && vm.orderInfo.header.status !== 'cancelled'">
           <a href ng-click="vm.payEmoneyButtonClicked = true" class="btn btn-confirm-emoney-pay">
-            {{ 'web.buttons.confirmElectronicMoneyPay' | aliasStatic}}
+            <span ng-if="vm.orderInfo.paymentform === 'electronic_money'">{{ 'web.buttons.confirmElectronicMoneyPay' | aliasStatic}}</span>
+            <span ng-if="vm.orderInfo.paymentform === 'e-banking'">{{ 'web.buttons.confirmEBankingPay' | aliasStatic }}</span>
           </a>
         </li>
         <li ng-if="vm.orderInfo.possiblePaymentForms">
