--- a/src/components/order/order.html
+++ b/src/components/order/order.html
@@ -443,7 +443,7 @@
           </a>
         </li>
         <li ng-if="vm.orderInfo.refundAllowed">
-          <a href ng-click="vm.openRefund(vm.pnrOrTicketNumber, vm.lastName)" class="btn">
+          <a href ng-click="vm.openRefund(vm.orderInfo.header.regunm, vm.orderInfo.header.lastName)" class="btn">
             {{ 'web.orderInfo.actions.refund' | aliasStatic}}
           </a>
         </li>
