--- a/src/components/order/order.html
+++ b/src/components/order/order.html
@@ -4,7 +4,7 @@
   {{ vm.errorMessage | aliasDynamic }}
 </div>
 
-<div ng-if="!vm.loading && vm.orderInfo && !vm.errorMessage && !vm.popupChoosePayMethodPending" class="invoice">
+<div ng-if="!vm.loading && vm.orderInfo && !vm.errorMessage && !vm.popupChoosePayMethodPending" class="invoice" online-payment-restrict order-info="vm.orderInfo" show-payment-frame="vm.showPaymentFrame">
   <div class="invoice__i">
     <div ng-if="vm.orderInfo.header.regnum" class="invoiceInfo">
       <div class="invoiceInfo__i">
@@ -391,37 +391,23 @@
 
 
 
-    <!-- Возможный воркэраунд #34307 -->
-    <!--<payment-frame ng-if="vm.showPaymentFrame && vm.orderInfo.paymentform !== 'electronic_money'" url="vm.orderInfo.paymentRedirectTo"></payment-frame>-->
     <payment-frame ng-if="vm.showPaymentFrame" url="vm.orderInfo.paymentRedirectTo"></payment-frame>
-    <!--TODO: разобраться как переопределять контроллеры-->
-      <!--<div style="display: none;" ng-init="vm.orderInfo.paymentform === 'electronic_money' || 'e-banking' ? vm.payEmoneyButtonClicked = false : vm.payEmoneyButtonClicked = true"></div>-->
-      <!--<div ng-if="vm.orderInfo.paymentform === 'electronic_money' || 'e-banking' && vm.showPaymentFrame" class="btn-row btn-row&#45;&#45;confirm-electronic-money">-->
-          <!--<ul>-->
-              <!--<li ng-if="vm.orderInfo.paymentform === 'electronic_money' || 'e-banking'">-->
-                  <!--<a href ng-click="vm.payEmoneyButtonClicked = true" class="btn btn-confirm-emoney-pay">-->
-                    <!--<span ng-if="vm.orderInfo.paymentform === 'electronic_money'">{{ 'web.buttons.confirmElectronicMoneyPay' | aliasStatic}}</span>-->
-                    <!--<span ng-if="vm.orderInfo.paymentform === 'e-banking'">{{ 'web.buttons.confirmEBankingPay' | aliasStatic }}</span>-->
-
-                  <!--</a>-->
-              <!--</li>-->
-          <!--</ul>-->
-      <!--</div>-->
 
 
     <div class="checkPassengerDataInfo" ng-if="vm.showPaymentFrame">
       <p class="checkPassengerDataInfo__content">{{ 'web.messages.checkPassengerData' | aliasStatic }}</p>
     </div>
-    <payment-frame ng-if="vm.showPaymentFrame && vm.payEmoneyButtonClicked" url="vm.orderInfo.paymentRedirectTo"></payment-frame>
 
 
     <div ng-if="!vm.showPaymentFrame" class="btn-row">
       <ul>
-        <!--<li ng-if="vm.orderInfo.paymentform === 'electronic_money' || 'e-banking' && vm.orderInfo.header.status !== 'cancelled'">-->
-          <!--<a href ng-click="vm.payEmoneyButtonClicked = true" class="btn btn-confirm-emoney-pay">-->
-            <!--<span ng-if="vm.orderInfo.paymentform === 'electronic_money'">{{ 'web.buttons.confirmElectronicMoneyPay' | aliasStatic}}</span>-->
-            <!--<span ng-if="vm.orderInfo.paymentform === 'e-banking'">{{ 'web.buttons.confirmEBankingPay' | aliasStatic }}</span>-->
-          <!--</a>-->
+        <li ng-if="restrictPayment.restrictPayment">
+          <a href ng-click="restrictPayment.allowPayment()" class="btn btn-confirm-emoney-pay">
+            <span ng-if="vm.orderInfo.paymentform === 'electronic_money'">{{ 'web.buttons.confirmElectronicMoneyPay' | aliasStatic}}</span>
+            <span ng-if="vm.orderInfo.paymentform === 'e-banking'">{{ 'web.buttons.confirmEBankingPay' | aliasStatic }}</span>
+            <span ng-if="vm.orderInfo.paymentform === 'plastic_card'">{{ 'web.buttons.plastic_card_Pay' | aliasStatic }}</span>
+          </a>
+
         <!--</li>-->
         <li ng-if="vm.orderInfo.possiblePaymentForms">
           <a href class="btn btn-change-pay-method" fancybox="popupChoosePayMethod">
@@ -453,7 +439,7 @@
             {{ 'web.orderInfo.actions.exchange' | aliasStatic}}
           </a>
         </li>
-        <li ng-if="vm.orderInfo.retryRegisterAllowed">
+        <li ng-if="vm.orderInfo.retryRegisterAllowed && !restrictPayment.restrictPayment">
           <a href ng-click="vm.retryPayment()" class="btn">
             {{ 'web.buttons.retryPay' | aliasStatic}}
           </a>
