--- a/src/components/order/order.html
+++ b/src/components/order/order.html
@@ -37,7 +37,7 @@
         </span>
       </div>
       <div ng-if="vm.orderInfo.header.status == 'paid'" class="btn_receipt_cont">
-        <a ng-href="./receipt?pnr={{ vm.orderInfo.header.regnum }}&lastName={{ vm.lastName }}" target="_blank"
+        <a ng-href="./receipt?pnr={{ vm.orderInfo.header.regnum }}&lastName={{ vm.orderInfo.header.lastName }}&tabId={{ vm.tabId }}" target="_blank"
            class="show_receipt">
           {{ 'web.orderInfo.actions.receipt' | aliasStatic}}
         </a>
@@ -249,6 +249,22 @@
                           </p>
                         </td>
                       </tr>
+                      <tr ng-if="passenger.specialNeedSsrsList">
+                        <td colspan="3">
+                          <div class="passenger-special-needs">
+                            <a href class="link passenger-special-needs__switch"
+                              ng-click="vm.specialNeedShowState[num] = !vm.specialNeedShowState[num];">
+                              {{ 'web.orderInfo.passenger.specialNeed.select' | aliasStatic }}
+                            </a>
+                            <div class="passenger-special-needs__list" ng-if="vm.specialNeedShowState[num]">
+                              <div class="passenger-special-needs__item"
+                                ng-repeat="(ssrNum, ssr) in passenger.specialNeedSsrsList track by $index"
+                                ng-bind-html=" 'web.orderInfo.passenger.specialNeed.ssr.' | aliasWithPrefix:ssr ">
+                              </div>
+                            </div>
+                          </div>
+                        </td>
+                      </tr>
                       </tbody>
                     </table>
                   </div>
@@ -382,21 +398,21 @@
       </div>
     </div>
 
-    <div ng-if="vm.orderInfo.currencyToPay != vm.orderInfo.currency && vm.showPaymentFrame"
-         class="currencyConvertWarning">
-      <span ng-bind-html=" 'web.messages.currencyConvertWarning' | aliasStatic "></span>
+    <div ng-if="(vm.orderInfo.price != vm.orderInfo.amountToPay || vm.orderInfo.currencyToPay != vm.orderInfo.currency) && vm.showPaymentFrame"
+         class="amountToPayWarning">
+      <span ng-bind-html=" 'web.messages.amountToPayWarning' | aliasStatic "></span>
       <span ng-bind-html="{ value: vm.orderInfo.amountToPay, currency: vm.orderInfo.currencyToPay } | price"></span>
     </div>
 
 
 
+      <div class="checkPassengerDataInfo" ng-if="vm.showPaymentFrame">
+          <p class="checkPassengerDataInfo__content">{{ 'web.messages.checkPassengerData' | aliasStatic }}</p>
+      </div>
 
     <payment-frame ng-if="vm.showPaymentFrame" url="vm.orderInfo.paymentRedirectTo"></payment-frame>
 
 
-    <div class="checkPassengerDataInfo" ng-if="vm.showPaymentFrame">
-      <p class="checkPassengerDataInfo__content">{{ 'web.messages.checkPassengerData' | aliasStatic }}</p>
-    </div>
 
 
     <div ng-if="!vm.showPaymentFrame" class="btn-row">
@@ -427,7 +443,7 @@
           </a>
         </li>
         <li ng-if="vm.orderInfo.exchangeAllowed">
-          <a href ng-click="vm.openExchange(vm.orderInfo.header.regnum, vm.orderInfo.header.lastName)" class="btn">
+          <a href ng-click="vm.openExchange()" class="btn">
             {{ 'web.orderInfo.actions.exchange' | aliasStatic}}
           </a>
         </li>
